@@ -1,3 +1,14 @@
+2019-08-30  Philippe Normand  <pnormand@igalia.com>
+
+        [WPE][Qt] loadingChanged signal parameter is unusable
+        https://bugs.webkit.org/show_bug.cgi?id=201301
+
+        Reviewed by Carlos Garcia Campos.
+
+        * MiniBrowser/wpe/qt/main.qml: Add a basic loadingChange signal handler.
+        * Scripts/webkitpy/style/checker.py: White-list WPEQtView.h for
+        readablity/parameter_name code styl checker rule.
+
 2019-08-28  Alicia Boya García  <aboya@igalia.com>
 
         [MSE][GStreamer] WebKitMediaSrc rework
